--- a/xjob-be/src/main/resources/application.properties
+++ b/xjob-be/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql= true
 spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
+
+#logging.level.org.springframework.messaging=trace
+#logging.level.org.springframework.web.socket=trace
